--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb+srv://jarvis:Jarvis123321123321@cluster0.oz4kv0d.mongodb.net/Test?retryWrites=true&w=majority
-SECRET=jarvis@jarvis@007@ironman@@007
+MONGO_URI=[MONGO_URI]
+SECRET=[SECRET]
